# arc_cash

./: .gitignore  AutoChecker.c  AutoChecker.h  CMakeLists.txt  Page.c  Page.h  README.md  arc_cache.c  arc_cache.h  arc_cash.c  arc_cash.h  arc_main.c  cachedir.c  cachedir.h  cachetest.c  cachetest.h  cachetest_main.c  fcr_cache.c  fcr_cache.h  frc_cache.c  frc_cache.h  frc_main.c  lru_cache.c  lru_cache.h  lru_main.c  main.c  test_idents.h  testgen.c  testgen.h  testgen_main.c
arc_src/: arc_cache.c  arc_cache.h  arc_main.c
frc_src/: frc_cache.c  frc_cache.h  frc_main.c
gen_lib/: CMakeLists.txt
gen_lib/graph_work/: CMakeLists.txt  tree_to_graphwiz_translation.c  tree_to_graphwiz_translation.h
gen_lib/linear_algebra_elements/: CMakeLists.txt  complex.c  complex.h  matrix.h  matrix_def.h  matrix_general_type.c  matrix_general_type.h  rational.c  rational.h  vector_algebraic_addendum.h  vector_algebraic_addendum_def.h  vector_algebraic_addendum_general_type.c  vector_algebraic_addendum_general_type.h
gen_lib/standart_classes/: CMakeLists.txt
gen_lib/standart_classes/hashtable/: CMakeLists.txt  hash_table.c  hash_table.h  hash_table_def.h  hash_table_general_type.c  hash_table_general_type.h  hashmap.c  hashmap.h  hashmap_def.h  hashmap_general_type.c  hashmap_general_type.h
gen_lib/types_and_functions_declarations/: CMakeLists.txt  arithmetic_type_declaration.c  arithmetic_type_declaration.h  complete_type_container.c  complete_type_container.h  functions_extensions.c  functions_extensions.h  general_type.c  general_type.h  io_type_declaration.c  io_type_declaration.h  type_declaration.c  type_declaration.h
gen_lib/user_interacts/: CMakeLists.txt  user_interactions.c  user_interactions.h
gen_lib/vector/: Array2dInt.c  Array2dInt.h  CMakeLists.txt  algorithms.c  algorithms.h  arrayint.c  arrayint.h  sparse_vector.c  sparse_vector.h  vector.h  vector_def.h  vector_general_type.c  vector_general_type.h
lru_src/: lru_cache.c  lru_cache.h  lru_main.c
shared/: modes.h
shared/AutoChecker/: AutoChecker.c  AutoChecker.h
shared/Page/: Page.c  Page.h
shared/cachedir/: cachedir.c  cachedir.h
testpool/arcperfpattern/: test-0.txt  test-1.txt  test-10.txt  test-11.txt  test-12.txt  test-13.txt  test-14.txt  test-2.txt  test-3.txt  test-4.txt  test-5.txt  test-6.txt  test-7.txt  test-8.txt  test-9.txt
testpool/handytests/: handy-0.tst  handy-1.tst  handy-2.tst  handy-3.tst
tests/: 2-0.tst  2-1.tst  2-10.tst  2-11.tst  2-12.tst  2-2.tst  2-3.tst  2-4.tst  2-5.tst  2-6.tst  2-7.tst  2-8.tst  2-9.tst  4-0.tst  4-1.tst  4-10.tst  4-11.tst  4-12.tst  4-2.tst  4-3.tst  4-4.tst  4-5.tst  4-6.tst  4-7.tst  4-8.tst  4-9.tst  6-0.tst  6-1.tst  6-10.tst  6-11.tst  6-12.tst  6-2.tst  6-3.tst  6-4.tst  6-5.tst  6-6.tst  6-7.tst  6-8.tst  6-9.tst  7-0.tst  (+29 more)
tests/arcperfpattern/: test-0.txt  test-1.txt  test-10.txt  test-11.txt  test-12.txt  test-13.txt  test-14.txt  test-2.txt  test-3.txt  test-4.txt  test-5.txt  test-6.txt  test-7.txt  test-8.txt  test-9.txt
testsys/: test_idents.h
testsys/cachetest/: cachetest.c  cachetest.h  cachetest_main.c
testsys/testgen/: testgen.c  testgen.h  testgen_main.c
(+22 files in other folders)
